@@ -2,6 +2,7 @@ Changelog for Articles.
 
 Articles 1.7.12
 ===============================
+- Fixes an issue where the Articles RSS URL would return the error page
 - Warn users about unsaved changes only if there are actual unsaved changes
 - Adds the possibility to set the summary (introtext) for the Articles container [#142]
 - Fixes a bug where the setting `Group By Year Chunk` had no effect [#122]
